Адаптивные страницы товара

--- a/app/cards-single.html
+++ b/app/cards-single.html
@@ -82,9 +82,9 @@
 
 	<main class="spacing-bottom">
 
-		<section class="spacing-bottom container">
+		<section class="spacing-bottom container section-presentation">
 			<div class="row">
-				<div class="col-5 offset-1">
+				<div class="col-xl-5 col-md-6 offset-xl-1 order-xl-0 order-md-0 order-1">
 					<div class="big-title purple-text">
 						Ваши новые визитки! <strong>от <b>399</b> рублей</strong>
 					</div>
@@ -95,13 +95,13 @@
 						<li>ваши новые визитки готовы!</li>
 					</ul>
 				</div>
-				<div class="col-5 head-inset">
+				<div class="col-xl-5 col-md-6 order-xl-1 order-md-1 order-0 head-inset">
 					<img src="img/il_5.jpg" alt="">
 				</div>
 			</div>
 		</section>
 
-		<section class="spacing-bottom container">
+		<section class="spacing-bottom container section-presentation-buttons">
 			<h1 class="purple-header text-center">Визитки для бизнеса</h1>
 			<div class="row">
 				<div class="col-md-6 text-center">
@@ -115,9 +115,9 @@
 			</div>
 		</section>
 
-		<section class="spacing-bottom container">
+		<section class="spacing-bottom container section-presentation-chara">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-xl-4 col-md-6">
 					<div class="white-wrap accordeon">
 						<div class="accordeon__panel">
 							<div class="accordeon__header active">Готовый дизайн</div>
@@ -157,7 +157,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4 col-md-6">
 					<div class="">
 						<div class="tabs-outer">
 							<div class="tabs-header">
@@ -270,7 +270,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-xl-4">
 					<div class="grey-wrap">
 						<div class="purple-header purple-header_medium">Все очень просто!</div>
 						<ol class="three-steps">
