--- a/app/index.html
+++ b/app/index.html
@@ -82,10 +82,10 @@
 
 	<div class="container">
 		<div class="main-slider">
-			<section class="main-slider__item">
-				<article class="main-slider__text">
-					<div class="main-slider__header">КАЧЕСТВО</div>
-					<div class="main-slider__subhead">премиального уровня</div>
+			<section class="main-slider-item">
+				<article class="main-slider-item__text">
+					<div class="main-slider-item__header">КАЧЕСТВО</div>
+					<div class="main-slider-item__subhead">премиального уровня</div>
 					<ul class="check-list">
 						<li>
 						Печать на итальянской экстра белой
@@ -99,7 +99,28 @@
 					</ul>
 					<a href="#" class="button button_big button_green button_uppercase">Выбрать дизайн</a>
 				</article>
-				<div class="main-slider__image">
+				<div class="main-slider-item__image">
+					<img src="img/slide.jpg" alt="">
+				</div>
+			</section>
+			<section class="main-slider-item">
+				<article class="main-slider-item__text">
+					<div class="main-slider-item__header">КАЧЕСТВО</div>
+					<div class="main-slider-item__subhead">премиального уровня</div>
+					<ul class="check-list">
+						<li>
+						Печать на итальянской экстра белой
+						</li>
+						<li>
+						Печать на итальянской экстра белой
+						</li>
+						<li>
+						Печать на итальянской экстра белой
+						</li>
+					</ul>
+					<a href="#" class="button button_big button_green button_uppercase">Выбрать дизайн</a>
+				</article>
+				<div class="main-slider-item__image">
 					<img src="img/slide.jpg" alt="">
 				</div>
 			</section>
@@ -133,7 +154,7 @@
 			</header>
 			<section class="catalog__content show" id="catalog-1">
 				<header class="line-header">
-					<div class="h1">В нашем каталоге есть визитки для любого бизнеса <div class="tooltip">?</div></div>
+					<div class="h1">В нашем каталоге есть визитки для любого бизнеса</div>
 					<div class="line-header__subhead">Вот лишь некоторые темы, которые вы можете найти:</div>
 				</header>
 				<div class="list-blocks">
